# facebook-client

./: .gitignore  Dockerfile  facebook-client.cabal  main.go  stack.yaml
.stack-work/install/x86_64-linux/lts-9.6/8.0.2/flag-cache/: haskell-web-server-0.1.0.0
haskell-server-in-progress/: haskell-web-server.cabal
haskell-server-in-progress/.stack-work/install/x86_64-linux/lts-9.6/8.0.2/flag-cache/: aeson-1.1.2.0-7ssY6fy1GxZGXxTPcOtf2k  aeson-pretty-0.8.5-4ArTR5pkpZX48zloKnfDNn  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  appar-0.1.4-DGWHHt2WRn9FI49prcwO9  asn1-encoding-0.9.5-CmDkwNPA51zjuzFcENFZ5  asn1-parse-0.9.4-HSgo3I4Jg5sAQWRFdyScvb  asn1-types-0.3.2-Ls8owv2hbTfEqG1LKzBcjy  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  attoparsec-0.13.1.0-3ql4hcH9pGfBAlE21oqFTQ  auto-update-0.1.4-EmUvNdmhEju51bHrtaEMpz  base-compat-0.9.3-KeJp8zYMpcS9WibvTcxU22  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  basement-0.0.2-HQuQCDQkzPb1RQsskWNdsw  blaze-builder-0.4.0.2-LxClHUTiKUUAxWtvJ5Oeoy  byteable-0.1.1-2lU1pexQSLj1KbNO17UifQ  byteorder-1.0.4-9NlNHkBVdo7F1prFVKrkcH  bytestring-builder-0.10.8.1.0-EUL7HUZoBoJHHdeLzmqEk9  case-insensitive-1.2.0.10-1D5OUKQ7UrJ7IpOe0di4Un  cereal-0.5.4.0-BsAGxfp8yAs3CiRo2E875e  cmdargs-0.10.18-1MOxB7BXiUZGCBZB9Kx8qK  conduit-1.2.12-Lvx0NKWTZH4BnyzXR667l8  conduit-extra-1.1.17-L1cK7V6tC2ELZV4EI9yJFs  connection-0.2.8-7E5s9ndt8OF7NNDH3ifO8K  cookie-0.4.2.1-ImqC1hbvUERAwQQgqhuUAD  cryptonite-0.23-7SwQljDtwztDJ3Fe01tUO9  data-default-class-0.1.2.0-GsXqKN6o1X9jr0fF5qCVD  (+68 more)
haskell-server-in-progress/src/: .Main.hs.swp  :w  Main.hs
src/: Main.hs
